--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Timbre Synth</title>
     <script src="js/angular.min.js"></script>
     <script src="js/timbre.js"></script>
     <script src="js/keyboard.js"></script>
